fix: docsearch modal should have a larger z-index than all other things

--- a/packages/theme-default/src/style.css
+++ b/packages/theme-default/src/style.css
@@ -214,3 +214,7 @@ html .shiki.Night.Owl {
 html.dark .shiki.Night.Owl {
   display: block;
 }
+
+.DocSearch-Container {
+  z-index: 9999;
+}
